# vs-stubs

./: .gitignore  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci-pylint.yml  ci-pytest.yml  lint.yml  pypipublish.yml  vscode-check.yml  vscode-publish.yml
src/vsstubs/: cli.py  constants.py  func.py  stubs.py  types.py
src/vsstubs-vscode/: CHANGELOG.md  LICENSE  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
src/vsstubs-vscode/src/: constants.ts  core.ts  extension.ts  helpers.ts  logging.ts  watcher.ts
src/vsstubs/_template/: _typing.pyi  _wrappers.pyi  constants.pyi  env.pyi  formats.pyi  frames.pyi  plugin.pyi  props.pyi
stubs/vapoursynth/: __init__.pyi
tests/: conftest.py  test_cli.py  test_stubs.py  test_types.py  test_utils.py
vsstubs/: __init__.py  cli.py  constants.py  func.py  stubs.py  template.py  types.py  utils.py
vsstubs/_template/: __all__.pyi  _typing.pyi  _wrappers.pyi  constants.pyi  env.pyi  formats.pyi  frames.pyi  logging.pyi  misc.pyi  nodes.pyi  outputs.pyi  plugin.pyi  props.pyi
