[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "vsstubs"
dynamic = ["version"]
description = "Typing stubs for VapourSynth"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
keywords = ["stubs", "typing", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = ["vapoursynth>=73", "typer", "rich"]

[project.urls]
Homepage = "https://github.com/Ichunjo/vs-stubs"
Repository = "https://github.com/Ichunjo/vs-stubs"
Issues = "https://github.com/Ichunjo/vs-stubs/issues"

[project.scripts]
vsstubs = "vsstubs.cli:app"

[dependency-groups]
dev = ["mypy~=1.18.2", "ruff~=0.14.0", "twine"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"
next-version = "minor"
write = { file = "vsstubs/_version.py", template = "__version__ = \"{normalized_version}\"\n__version_tuple__ = {version_tuple}" }

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.hatch.build]
artifacts = ["vsstubs/_version.py"]

[tool.hatch.build.targets.wheel]
packages = ["vsstubs"]
include = ["vsstubs/_template/*.pyi", "vsstubs/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "vsstubs",
    "vsstubs/_template/*.pyi",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

exclude = ["stubs/vapoursynth"]
exclude_gitignore = true

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
line-length = 120
extend-exclude = ["stubs/vapoursynth/__init__.pyi"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E",
    "C4",
    "I",
    "PYI",
    "Q",
    "SIM",
    "N",
    "W",
    "UP",
    "FURB",
    "RUF",
]


[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
"vsstubs/_template/**.pyi" = [
    "PYI002",
    "PYI046",
    "PYI029",
    "F822",
    "N801",
    "N805",
]
