[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "vsstubs"
dynamic = ["version"]
description = "Typing stubs for VapourSynth"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
keywords = ["stubs", "typing", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "vapoursynth>=74",
    "typer>=0.24.0",
    "rich>=15.0.0",
    "typing_extensions>=4.15.0",
    "build>=1.4.3",
    "uv-build>=0.11.7",
    "toml-rs>=0.3.12",
    "packaging>=26.1",
]

[project.urls]
Homepage = "https://github.com/Ichunjo/vs-stubs"
Repository = "https://github.com/Ichunjo/vs-stubs"
Issues = "https://github.com/Ichunjo/vs-stubs/issues"

[project.scripts]
vsstubs = "vsstubs.cli:app"

[dependency-groups]
dev = ["mypy>=1.20.0,<1.21.0", "ruff>=0.15,<0.16"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.hatch.build.targets.sdist]
include = ["stubs", "vsstubs", "vsstubs/_template/*.pyi"]

[tool.hatch.build.targets.wheel]
packages = ["vsstubs"]
include = ["vsstubs/_template/*.pyi", "vsstubs/py.typed"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

exclude = ["stubs/vapoursynth"]
exclude_gitignore = true

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
line-length = 120
extend-exclude = ["stubs/vapoursynth/__init__.pyi"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "YTT",
    "ASYNC",
    "C4",
    "LOG",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "I",
    "N",
    "PERF",
    "E",
    "W",
    "UP",
    "FURB",
    "RUF",
]


[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
"vsstubs/_template/**.pyi" = [
    "PYI002",
    "PYI046",
    "PYI029",
    "F822",
    "N801",
    "N805",
]
